--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
+    "mongodb": "^6.14.2",
     "react": "^18.3.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.3.1",
@@ -30,6 +31,7 @@
     "recharts": "^2.5.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^5.3.6",
     "talkjs": "^0.31.0",
     "web-vitals": "^2.1.4"
